# COMP-433

./: .gitignore  README.md  main.py  pyproject.toml
RAFT/: .gitignore  result_long_term_forecast.txt
RAFT/exp/: exp_long_term_forecasting.py
RAFT/models/: RAFT.py
RAFT/results/long_term_forecast_Solar_Alabama_RAFT_custom_ftM_sl48_ll48_pl24_dm128_nh8_el2_dl1_df256_expand2_dc4_fc1_ebtimeF_dtTrue_test_0/: metrics.npy
RAFT/results/long_term_forecast_Weather_2024_Final_RAFT_custom_ftM_sl720_ll360_pl192_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_Exp_0/: metrics.npy
RAFT/results/long_term_forecast_Weather_Paper_Reproduction_RAFT_custom_ftM_sl720_ll360_pl96_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_Exp_0/: metrics.npy
RAFT/results/long_term_forecast_temp_RAFT_ETTh1_ftM_sl96_ll48_pl96_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_test_0/: metrics.npy
RAFT/results/long_term_forecast_temp_RAFT_ETTh2_ftM_sl96_ll48_pl96_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_test_0/: metrics.npy
RAFT/results/long_term_forecast_temp_RAFT_ETTm1_ftM_sl96_ll48_pl96_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_test_0/: metrics.npy
RAFT/results/long_term_forecast_temp_RAFT_ETTm2_ftM_sl96_ll48_pl96_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_test_0/: metrics.npy
RAFT/results/long_term_forecast_temp_RAFT_custom_ftM_sl24_ll12_pl24_dm512_nh8_el2_dl1_df2048_expand2_dc4_fc1_ebtimeF_dtTrue_test_0/: metrics.npy  pred.npy  true.npy
preprocessors/: ecommerce.py  electricity.py  exchange_rate.py  solar.py  weather.py
(+1 files in other folders)
